# wma_projekt

./: CMakeLists.txt  cm  svm.py
src/: main.cpp  projekt.cpp  projekt1.cpp  random.cpp  siftkmeans.cpp
